day 15 - Policies/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exemplo-pod
spec:
  containers:
  - name: exemplo-container-policy
    image: nginx
