day 15 - Policies/require-resourcer-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: require-cpu-memory-limits
spec:
  validationFailureAction: Enforce
  rules:
  - name: Validate-Limits
    match: 
      resources:
        kinds:
        - Pod
    validate: 
      message: "CPU and memory limits are required"
      pattern:
          spec:
            containers:
            - name: "*"
            resources:
              limits:
                cpu: "*"
                memory: "*"
